--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "cSpell.words": [
+    "apisya",
     "asider",
     "bodyer",
     "brotli",
@@ -21,6 +22,8 @@
     "cascader",
     "cfirst",
     "clast",
+    "commitlint",
+    "commitlintrc",
     "consts",
     "cparagraph",
     "csentence",
@@ -39,6 +42,7 @@
     "Geeker",
     "gifsicle",
     "Gitee",
+    "hbuilderx",
     "heavyer",
     "heavyest",
     "heavyester",
@@ -55,11 +59,13 @@
     "picomatch",
     "pinia",
     "Popconfirm",
+    "postcss",
     "rtype",
     "rurl",
     "seled",
     "sortablejs",
     "stylelint",
+    "stylelintignore",
     "treemap",
     "unplugin",
     "valide",
