--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint": "eslint src --ext .ts,.tsx,.vue,.js,.jsx",
     "lint:fix": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx",
     "lint:ls": "ls-lint",
+    "lint-staged": "lint-staged",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css,vue}\"",
     "prepare": "husky install",
     "api": "node ./scripts/api/index.js",
@@ -47,11 +48,14 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@ls-lint/ls-lint": "^2.2.3",
     "@types/node": "^18.13.0",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "commitizen": "^4.3.0",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -79,5 +83,9 @@
     "vite-plugin-imagemin": "^0.6.1",
     "vue-tsc": "^1.0.24"
   },
-  "lint-staged": {}
+  "lint-staged": {
+    "*.{js,ts,vue}": [
+      "eslint --fix"
+    ]
+  }
 }
