--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint": "eslint src --ext .ts,.tsx,.vue,.js,.jsx",
     "lint:fix": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx",
     "lint:ls": "ls-lint",
-    "lint:staged": "lint-staged",
+    "lint-staged": "lint-staged",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css,vue}\"",
     "prepare": "husky install",
     "api": "node ./scripts/api/index.js",
@@ -81,5 +81,10 @@
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-imagemin": "^0.6.1",
     "vue-tsc": "^1.0.24"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,less,md,vue}": [
+      "eslint --fix"
+    ]
   }
 }
