--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,12 @@ lerna-debug.log*
 
 node_modules
 # dist
-dist-ssr
+# dist-ssr
 *.local
 
 # Editor directories and files
 # .vscode/*
-!.vscode/extensions.json
+# !.vscode/extensions.json
 .idea
 .DS_Store
 *.suo
