--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "editor.formatOnSave": true,
   // "editor.formatOnType": true,
   // "editor.formatOnPaste": true,
-  "eslint.enable": false,
+  "eslint.enable": true,
   "eslint.alwaysShowStatus": true,
   "eslint.quiet": false,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
