--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "sortablejs": "^1.15.2",
     "vite-plugin-mock": "^2.9.6",
     "vue": "^3.3.4",
+    "vue-i18n": "^9.13.1",
     "vue-router": "^4.2.4",
     "vuedraggable": "^4.1.0",
     "xlsx": "^0.18.5"
