--- a/package.json
+++ b/package.json
@@ -1,8 +1,23 @@
 {
   "name": "Quick Admin",
-  "private": true,
-  "version": "1.0.0",
   "type": "module",
+  "author": "fanlichuan",
+  "version": "1.0.0",
+  "private": true,
+  "license": "MIT",
+  "contributes": [
+    "you"
+  ],
+  "bugs": "https://gitee.com/fanlichuan/quick_admin_vue3/issues",
+  "homepage": "https://gitee.com/fanlichuan/quick_admin_vue3#https://fanlichuan.gitee.io/management/vue/#/login",
+  "description": "以快（计算机执行效率、开发效率）为核心的后台管理系统开发模板",
+  "keywords": [
+    "quick",
+    "admin",
+    "vue3",
+    "ElementPlus",
+    "TypeScript"
+  ],
   "scripts": {
     "serve": "vite",
     "dev": "vite --mode dev",
