feat: 工程文件整理

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,7 @@
     "Geeker",
     "gifsicle",
     "Gitee",
+    "gitnore",
     "hbuilderx",
     "heavyer",
     "heavyest",
@@ -70,6 +71,7 @@
     "sortablejs",
     "stylelint",
     "stylelintignore",
+    "stylelintrc",
     "treemap",
     "unplugin",
     "valide",
