--- a/package.json
+++ b/package.json
@@ -39,7 +39,11 @@
     "prepare": "husky install",
     "api": "node ./scripts/api/index.js",
     "apisya": "node ./scripts/api/ya.js",
-    "imgs": "node ./scripts/images.js"
+    "imgs": "node ./scripts/images.js",
+    "out": "node ./scripts/out/index.js",
+    "docs:dev": "vitepress dev",
+    "docs:build": "vitepress build",
+    "docs:preview": "vitepress preview"
   },
   "dependencies": {
     "@wangeditor/editor-for-vue": "^5.1.12",
@@ -96,6 +100,7 @@
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-imagemin": "^0.6.1",
+    "vitepress": "^1.3.1",
     "vue-tsc": "^1.0.24"
   },
   "lint-staged": {
