--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "docs:preview": "vitepress preview"
   },
   "dependencies": {
+    "@mdit-vue/shared": "^2.1.3",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^1.3.2",
     "dayjs": "^1.11.7",
@@ -54,6 +55,8 @@
     "echarts-liquidfill": "^3.1.0",
     "element-plus": "^2.3.8",
     "lodash": "^4.17.21",
+    "markdown-it": "^14.1.0",
+    "markdown-it-container": "^4.0.0",
     "md5": "^2.3.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
