--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,7 +51,9 @@
     "heavyest",
     "heavyester",
     "imgs",
+    "impr",
     "Inds",
+    "Infa",
     "juejin",
     "lightester",
     "liquidfill",
