--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "api": "node ./scripts/api/index.js",
     "apisya": "node ./scripts/api/ya.js",
     "imgs": "node ./scripts/images.js",
-    "out": "node ./scripts/out/index.js",
+    "doc": "node ./scripts/doc/index.js",
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview"
