--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-imagemin": "^0.6.1",
     "vitepress": "^1.3.1",
+    "vue-docgen-api": "^4.79.2",
     "vue-tsc": "^1.0.24"
   },
   "lint-staged": {
