--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,7 +31,9 @@
     "csentence",
     "ctitle",
     "cword",
+    "daterange",
     "datetime",
+    "datetimerange",
     "dcount",
     "demi",
     "Descs",
@@ -62,6 +64,7 @@
     "lightester",
     "liquidfill",
     "macarons",
+    "maxlength",
     "mdit",
     "mkdirs",
     "mockjs",
