--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "stylelint-config-standard": "^36.0.0",
     "stylelint-config-standard-scss": "^13.0.0",
     "typescript": "^4.9.3",
+    "unplugin-auto-import": "^0.18.3",
     "unplugin-generate-component-name": "^0.2.0",
     "vite": "^4.1.0",
     "vite-plugin-cdn-import": "^0.3.5",
