--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "composite": true,
-    "module": "ESNext",
+    "module": "ESNext", // CommonJs
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true
   },
