--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
+    "qrcode": "^1.5.4",
     "qs": "^6.11.1",
     "screenfull": "^6.0.2",
     "sortablejs": "^1.15.2",
