--- a/.npmrc
+++ b/.npmrc
@@ -3,5 +3,6 @@
 # electron_mirror=https://mirrors.huaweicloud.com/electron/
 
 # registry=https://registry.npm.taobao.org
+registry=https://registry.npmmirror.com
 # disturl=https://npm.taobao.org/dist
 # electron_mirror=https://npm.taobao.org/mirrors/electron/
