--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "doc": "node ./scripts/doc/index.js",
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
-    "docs:preview": "vitepress preview"
+    "docs:preview": "vitepress preview",
+    "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "@mdit-vue/shared": "^2.1.3",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^1.3.2",
@@ -69,7 +71,7 @@
     "vite-plugin-mock": "^2.9.6",
     "vue": "^3.5.12",
     "vue-i18n": "^9.13.1",
-    "vue-router": "^4.2.4",
+    "vue-router": "^4.4.5",
     "vuedraggable": "^4.1.0",
     "xlsx": "^0.18.5"
   },
@@ -101,7 +103,7 @@
     "unplugin-auto-import": "^0.18.3",
     "unplugin-generate-component-name": "^0.2.0",
     "vite": "^5.4.10",
-    "vite-plugin-cdn-import": "^0.3.5",
+    "vite-plugin-cdn-import": "^1.0.1",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-html": "^3.2.2",
