--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "md5": "^2.3.0",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
+    "path-to-regexp": "^8.2.0",
     "pinia": "^2.1.7",
     "qrcode": "^1.5.4",
     "qs": "^6.11.1",
