--- a/package.json
+++ b/package.json
@@ -45,11 +45,15 @@
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview",
+    "interview:dev": "vitepress dev",
+    "interview:build": "vitepress build",
+    "interview:preview": "vitepress preview",
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "@mdit-vue/shared": "^2.1.3",
+    "@vueuse/core": "^11.3.0",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^1.3.2",
     "dayjs": "^1.11.7",
@@ -84,6 +88,7 @@
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/compiler-sfc": "^3.5.13",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
