--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,7 @@
     "macarons",
     "maxlength",
     "mdit",
+    "mediumint",
     "mkdirs",
     "mockjs",
     "monthrange",
@@ -88,6 +89,7 @@
     "stylelint",
     "stylelintignore",
     "stylelintrc",
+    "tinyint",
     "treemap",
     "typeof",
     "unplugin",
