--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "interview:dev": "vitepress dev",
     "interview:build": "vitepress build",
     "interview:preview": "vitepress preview",
+    "db": "node ./scripts/db/index.js",
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
