--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,6 +81,7 @@
     "pinia",
     "Popconfirm",
     "postcss",
+    "preinstall",
     "qrcode",
     "realname",
     "rtype",
@@ -105,6 +106,7 @@
     "vuedraggable",
     "vuetl",
     "vuets",
+    "vueuse",
     "wangeditor",
     "websockets",
     "xslx",
